Add contact form functionality with Gmail API integration
- Introduced a new contact form component to handle user submissions.
- Implemented an API endpoint for sending emails via Gmail API using OAuth2 authentication.
- Added environment variable setup instructions in the new setup guide.
- Included security measures such as input validation, rate limiting, and spam protection.
- Updated project configuration files and added necessary dependencies for OAuth2 and email handling.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.14.1"
+    "astro": "^5.14.1",
+    "dotenv": "^17.2.3",
+    "googleapis": "^169.0.0",
+    "ionicons": "^8.0.13",
+    "nodemailer": "^7.0.12"
   }
 }
