Update project configuration for Node.js server and API support
- Added @astrojs/node adapter for standalone server mode in astro.config.mjs.
- Updated Dockerfile to use Node.js as the runtime environment instead of Nginx, enabling server-side rendering for API routes.
- Adjusted docker-compose.yaml to expose the correct port for the Node.js server.
- Updated package-lock.json and package.json to include new dependencies and version updates for improved functionality and security.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,8 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "4321:80"
+      - "4321:4321"
     environment:
       - NODE_ENV=production
+      - PORT=4321
     restart: unless-stopped
