--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.5.1",
     "astro": "^5.14.1",
     "dotenv": "^17.2.3",
     "googleapis": "^169.0.0",
