Add environment variable check script and enhance Docker configuration
- Introduced a new script (check-env.js) to verify the availability of essential environment variables.
- Updated docker-compose.yaml to include environment variable definitions for better configuration management.
- Modified healthcheck.js to improve health check logic and error handling.
- Added a new health check API endpoint (health.ts) for Docker health checks.
- Refactored API endpoints to consistently read environment variables from process.env for improved reliability.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,4 +11,9 @@ services:
       - NODE_ENV=production
       - PORT=4321
       - HOST=0.0.0.0
+      - CONTACT_EMAIL=${CONTACT_EMAIL}
+      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+      - GOOGLE_REFRESH_TOKEN=${GOOGLE_REFRESH_TOKEN}
+      - GOOGLE_USER_EMAIL=${GOOGLE_USER_EMAIL}
     restart: unless-stopped
