Add project search functionality and analytics integration
- Introduced a client-side project search feature in the ProjectsTab component, allowing users to filter projects by category and query.
- Enhanced the PageInteractions component to track SPA pageviews and contact form submissions using Plausible analytics.
- Updated the BaseLayout to include Google and Bing site verification meta tags for SEO.
- Added a new Analytics component for privacy-friendly analytics tracking.
- Modified the .env.example file to include optional site verification variables.

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REFRESH_TOKEN=
 GOOGLE_USER_EMAIL=example@email.com
+
+# Search Console / Webmaster Tools verification (optional)
+PUBLIC_GOOGLE_SITE_VERIFICATION=
+PUBLIC_BING_SITE_VERIFICATION=
